--- a/src/homepage1.html
+++ b/src/homepage1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="logo.png" style="height: 170px; width: auto; transform:translate(-120px,-35px)"></a>
+        <a href="#" class="logo"><img src="/assets/logo.png" style="height: 170px; width: auto; transform:translate(-120px,-35px)"></a>
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#sec">About</a></li>
@@ -19,7 +19,7 @@
         </ul>
     </header>
     <section>
-       <img src="milkspill.png" id="milk" style="transform: translateX(390px);">
+       <img src="/assets/milkspill.png" id="milk" style="transform: translateX(390px);">
         <h2 id="text">Flavour🍴Voyage</h2>
         <div id="btn">
         <form id="search-form">
@@ -27,9 +27,9 @@
              <button type="submit"><i class="fas fa-search"></i></button>
          </form>
         </div>
-        <img src="grapes.png" id="grapes" style="height: 800px; width: auto;transform: translate(-200px,1150px);">
-        <img src="Guava.png" id="guava" style="height: 800px; width: auto;transform: translate(950px,850px);">
-        <img src="strawberry.png" id="strawberry" style="height: 800px; width: auto; transform: translate(-200px,150px);">
+        <img src="/assets/grapes.png" id="grapes" style="height: 800px; width: auto;transform: translate(-200px,1150px);">
+        <img src="/assets/Guava.png" id="guava" style="height: 800px; width: auto;transform: translate(950px,850px);">
+        <img src="/assets/strawberry.png" id="strawberry" style="height: 800px; width: auto; transform: translate(-200px,150px);">
         
     </section>
 
