--- a/src/login.html
+++ b/src/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <a href="#" class="logo"><img src="logo.png" style="height: 170px; width: auto; transform:translate(-120px,-35px)"></a>
+    <a href="#" class="logo"><img src="/assets/logo.png" style="height: 170px; width: auto; transform:translate(-120px,-35px)"></a>
     <ul>
         <li><a href="homepage1.html">Home</a></li>
         <li><a href="homepage1.html#sec">About</a></li>
